--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,13 @@ img{
 .header-position{
   display: flex;
   align-items: center;
-  margin-left: auto;
-  width: 1188px;
+}
+.header-conaction{
+  display: flex;
+  
+}   
+.language-switcher{
+  padding-left: 15px;
   margin-right: auto;
 }
 .nav-list{
@@ -82,7 +87,6 @@ img{
   border-radius: 35px 0;
   width: 141px;
   height: 41px;
-  margin-right: 49px;
 }
 .language-switcher{
   display: flex;
@@ -94,6 +98,7 @@ img{
   font-size: 16px;
   color: #fff;
 }
+/* main */
 .enter{
   background: url(../images/mainhead.png) center/cover no-repeat;
   padding-top: 180px;
@@ -178,6 +183,10 @@ img{
 .translate{
   background: url(../images/languagebackground.png) center/cover no-repeat;
 }
+.translate-item{
+  flex-basis: calc(( 100% - 30px ) / 3);
+  background-color: rgba(255, 255, 255, 0.7);
+}
 .translate-word{
  font-family: var(--second-family);
  font-weight: 400;
@@ -186,13 +195,30 @@ img{
  text-align: justify;
  color: var(--main-text-color);
 }
-.translate-word:nth-child(1):after{
+
+.group1:after{
   content: '';
   display: block;
   margin: 40px 0;
   height: 40px;
   width: 152px;
   background-image: url(../images/stickright.png);
+}
+.group2:after{
+   content: '';
+  display: block;
+  margin: 40px 0;
+  height: 40px;
+  width: 152px;
+  background-image: url(../images/birdmin.png);
+}
+.group3:after{
+  content: '';
+  display: block;
+  margin: 40px 0;
+  height: 40px;
+  width: 152px;
+  background-image: url(../images/stickleft.png);
 }
 .translate-result{
   font-family: var(--second-family);
@@ -201,6 +227,10 @@ img{
   line-height: 1.00;
   text-align: justify;
   color: #000;
+}
+.translate-list{
+  display: flex;
+  flex-wrap: wrap;
 }
 .footer{
   background: url(../images/overlay.png) center/cover no-repeat , url(../images/footerbackground.png) center/cover no-repeat;
