--- a/css/styles.css
+++ b/css/styles.css
@@ -41,17 +41,20 @@ img{
 }
 .header{
    background: url(../images/overlay.png) center/cover no-repeat,url(../images/header.png) center/cover no-repeat;
-   padding: 39px 0;
    display: flex;
    align-items: center;
+   width: 1440px;
+   margin: 0 auto;
+   padding-top: 39px;
+   padding-bottom: 39px;
+   padding-left: 204px;
+   padding-right: 48px;
 }
-.logo-header{
-  padding-bottom: 39px;
-}
+
 .header-position{
   display: flex;
   align-items: center;
-} 
+}
 .language-switcher{
   padding-left: 15px;
   margin-right: auto;
@@ -100,8 +103,11 @@ img{
 }
 /* main */
 .enter{
+  width: 1440px;
+  margin: 0 auto;
   background: url(../images/mainhead.png) center/cover no-repeat;
   padding-top: 180px;
+
 }
 .enter-position{
   display: flex;
@@ -169,6 +175,8 @@ img{
   margin-bottom: 180px;
 }
 .trailer{
+  width: 1440px;
+  margin: 0 auto;
   background: url(../images/trailerpicture.jpg) center/cover no-repeat;
 }
 .buttonstyle-watch{
@@ -186,6 +194,8 @@ img{
   
 }
 .translate{
+  width: 1440px;
+  margin: 0 auto;
   background: url(../images/languagebackground.png) center/cover no-repeat;
 }
 .translate-tile{
@@ -256,18 +266,20 @@ img{
 .footer{
   background: url(../images/overlay.png) center/cover no-repeat , url(../images/footerbackground.png) center/cover no-repeat;
   padding-top: 77px ;
-  padding-bottom: 76px;
+  padding-bottom: 25px;
+  width: 1440px;
+  margin: 0 auto;
 }
-/* .footer-position:nth-child(-n+2){
+.footer-position{
   display: flex;
-} */
+}
 .logo-footer{
   border-right: 2px solid white;
   padding-right: 80px;
   padding-top: 42px;
   padding-bottom: 42px;
 }
-.contact-text{
+.contact-text:nth-child(1){
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 20px;
@@ -275,7 +287,17 @@ img{
   color: #fff;
   margin-bottom: 18px;
   margin-left: 80px;
-  margin-right: 20px;
+  margin-right: 309px;
+}
+ .contact-item:nth-child(2) > .contact-text{
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 18px;
+  margin-left: 80px;
+  margin-right: 239px;
 }
 .contact-link{
   font-family: var(--font-family);
@@ -283,26 +305,26 @@ img{
   font-size: 20px;
   text-align: center;
   color: #fff;
-  margin-bottom: 18px;
-  margin-left: 20px;
-}
-.contact-position{
-  margin-top: 45px;
-}
-.vector1{
-  margin-top: 57px;
-  width: 269px;
-  height: 0px;
-  outline: 1px dashed white ;
-}
-.vector2{
-  width: 194px;
-  height: 0px;
-  margin-top: 11px;
-  outline: 1px dashed white ;
 }
 .contact-item{
   display: flex;
+}
+.contact-item:nth-child(1){
+  width: 745px;
+  height: 24px;
+  margin-top: 45px;
+  background-image: url(../images/vector1.png);
+  background-repeat: no-repeat;
+  background-size: 269px;
+  background-position: 205px;
+}
+.contact-item:nth-child(2){
+  width: 769px;
+  height: 24px;
+  background-image: url(../images/vector2.png);
+  background-repeat: no-repeat;
+  background-size: 194px;
+  background-position: 280px;
 }
 .info{
   font-family: var(--font-family);
@@ -310,5 +332,5 @@ img{
   font-size: 14px;
   text-align: center;
   color: #fff;
-  margin-top: 37px;
+  margin-left: 474px;
 }
